--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="flêche qui permet la navigation de la banière vers la gauche">
+		<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="flèche qui permet la navigation de la banière vers la gauche">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="flêche qui permet la navigation de la banière vers la droite">
+		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="flèche qui permet la navigation de la banière vers la droite">
 		<div class="dots">
 		</div>
 	</div>
